gcc/testsuite/go.dg/undef-1.go
// { dg-do compile }

package main

func main() {
  sys.Exit(i)		// { dg-error "undefined" }
}
